# dostoevsky

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  mvp.py  pyproject.toml  run_yoyo.py
backend/agents/: agents.yaml
backend/agents/describer/: output.json  prompt.md
backend/agents/teacher/: output.json  prompt.md
backend/app/auth/: router.py
backend/app/conversation/: __init__.py  audio.py  audio_utils.py  local_model_manager.py  openrouter.py  providers.py  router.py  storage.py
backend/app/initializers/: __init__.py  agents.py  profiles.py  super_admin.py
backend/app/media/: auth.py  extraction.py  router.py  services.py  storage.py
backend/app/preferences/: __init__.py  router.py
backend/app/profiles/: __init__.py  router.py
backend/app/study_plans/: router.py
backend/app/users/: router.py
backend/database/: connection.py
backend/database/migrations/: 20250506_01_aaBKK-initial-migration.sql  20260702_01_3lr39-teacher-feat.sql  20260712_01_vby31-profile-prompt.rollback.sql  20260712_01_vby31-profile-prompt.sql  20260713_01_abc12-local-audio-models.rollback.sql  20260713_01_abc12-local-audio-models.sql  run.py
backend/database/models/: __init__.py
backend/database/models/ai/: __init__.py  agent.py  local_voice.py  model.py  voice.py
backend/database/models/base/: __init__.py  refresh.py  user.py
backend/database/operations/: __init__.py
backend/profiles/: bartender.md  interviewer.md  negotiator.md  profiles.yaml  taxi_driver.md
backend/schedulers/: __init__.py  model_price.py
(+64 files in other folders)
