[project]
name = "dostoevsky-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt<4",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pypdf>=5.4.0",
    "pyjwt>=2.11.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.2",
    "yoyo-migrations>=9.0.0",
    "python-multipart>=0.0.32",
    "kokoro-onnx>=0.5.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]
